tests/specs/run/unsafe_proto_suggestion/throw_only.out
error: Uncaught (in promise) Error: boom
throw new Error("boom");
      ^
    at [WILDCARD]throw_only.js:3:7
